--- a/data/build.gradle
+++ b/data/build.gradle
@@ -41,7 +41,7 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.1'
     implementation 'androidx.room:room-runtime:2.4.3'
     kapt 'androidx.room:room-compiler:2.4.3'
-    implementation("androidx.room:room-ktx:2.4.3")
+    implementation 'androidx.room:room-ktx:2.4.3'
 
     implementation project(":domain")
 
