--- a/data/build.gradle
+++ b/data/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     kapt 'com.google.dagger:hilt-compiler:2.44'
     implementation 'com.squareup.moshi:moshi-kotlin:1.13.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.1'
+    implementation 'com.google.code.gson:gson:2.8.9'
     implementation 'androidx.room:room-runtime:2.4.3'
     kapt 'androidx.room:room-compiler:2.4.3'
     implementation 'androidx.room:room-ktx:2.4.3'
